--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.youtube.com/?app=desktop&hl=ja" frameborder="0" width="50%" height="600" style="border:1px solid #d4d4d4;"></iframe>
+<iframe src="https://www.youtube.com/" frameborder="0" width="50%" height="600" style="border:1px solid #d4d4d4;"></iframe>
