--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<iframe src="https://www.youtube.com/" frameborder="0" width="50%" height="600" style="border:1px solid #d4d4d4;"></iframe>
+<iframe
+  id="inlineFrameExample"
+  title="Inline Frame Example"
+  width="300"
+  height="200"
+  src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+</iframe>
