--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
   title="Inline Frame Example"
   width="500"
   height="1000"
-  src="http://192.168.0.112/">
+  src="https://www.google.co.jp/">
 </iframe>
