--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<iframe
-  id="inlineFrameExample"
-  title="Inline Frame Example"
-  width="500"
-  height="1000"
-  src="https://x.com/?lang=ja">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pbQQAwSQUX4?si=9jL5IyrRAPoTVec3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
